--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,12 @@
       <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
       <version>3.122.0</version>
     </dependency>
+	<dependency>
+	  <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+	  <groupId>org.jsoup</groupId>
+	  <artifactId>jsoup</artifactId>
+	  <version>1.17.2</version>
+	</dependency>
   </dependencies>
+  
 </project>
