--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>scalable.capital.parser</artifactId>
+  <artifactId>neo.broker.parser</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>scalable.capital.parser</name>
+  <name>neo.broker.parser</name>
   <url>http://maven.apache.org</url>
 
   <properties>
